<resources>
    <string name="app_name">Paathshaala</string>
    <string name="app_name1">Dash Board</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="show_email">Email</string>
    <string name="show_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up_button">Sign up</string>
    <string name="Already_have_account_login_here">Already have an account? Login here</string>
    <string name="new_user">New user? Signup here</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="editClassroom">Edit Classroom</string>
    <string name="courseName">Course Name:</string>
    <string name="course_hint">Course</string>
    <string name="venue_course">Venue:</string>
    <string name="venue_hint">Venue</string>
    <string name="startingDate">Starting Date:</string>
    <string name="timings_course">Timings:</string>
    <string name="timing_hint">Timings</string>
    <string name="duration_course">Duration:</string>
    <string name="duration_hint">Duration</string>
    <string name="fees_course">Fees:</string>
    <string name="fees_hint">Fees</string>
    <string name="updateBtn">Update</string>
    <string name="courseStudied_heading">Courses Studied</string>
    <string name="coursesTaught">Courses Taught</string>
    <string name="createClassroom">Create Classroom</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="from_hint">From</string>
    <string name="to_hint">To</string>
    <string name="post_btn">Post</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_in_button">Login</string>
    <string name="Registere_here">Not registered? Register here</string>
    <string name="log_out">Log Out</string>
    <string name="forget_password_email">Email</string>
    <string name="forget_password_btn">Send password to email</string>
    <string name="forgot_password_text_in_login_activity">Forgot password ?</string>
    <string name="title_activity_student_home">StudentHome</string>
    <string name="title_activity_teachaer_home">TeachaerHome</string>
    <string name="logout_btn">Logout</string>
    <string name="qualification_select">SELECT</string>
    <string-array name="Qualifications">
        <item>B.Tech</item>
        <item>M.Tech</item>
        <item>Ph.D</item>
        <item>Instructor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">Name</string>
    <string name="mail">Email</string>
    <string name="team">Our Team</string>


    <string-array name="skills">
        <item>Data Structure</item>
        <item>Mobile Computing</item>
        <item>Graduate Algorithms</item>
        <item>Data Mining</item>
        <item>FCS</item>
        <item>Machine learning</item>
        <item>Artificial Intelligence</item>
        <item>NLP</item>
        <item>DIP</item>
        <item>Computer Networks</item>
        <item>Computer Organization</item>
        <item>Database</item>
        <item>Operating System</item>
        <item>Graph Theory</item>
        <item>Discrete Maths</item>
        <item>Advance Programming</item>
        <item>Competitive Programming</item>
        <item>Game Theory</item>
        <item>Logical Reasoning</item>
        <item>Big Data</item>
        <item>Information Retrieval</item>
        <item>Web Development</item>
        <item>Python</item>
        <item>Neural Networks</item>
    </string-array>


    <string name="textViewPostCourse">Duration</string>
    <string name="textView2PostCourse">Class\nTimings</string>
    <string name="month_select">MONTHS</string>
    <string-array name="Months">
        <item>M</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="week_select">WEEKS</string>
    <string-array name="Weeks">
        <item>W</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="day_select">DAYS</string>
    <string-array name="Days">
        <item>D</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>





    <string name="global_chat">Global chat</string>
    <string name="inst_dob">DOB</string>
    <string name="teacher_home">Teacher</string>
    <string name="student_home">Student</string>
    <string name="per_rating">Personal Rating</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_home">Profile</string>
    <string name="course_duration">Course Duration : </string>
    <string name="duration">Duration</string>
    <string name="co_fee">Fee</string>
    <string name="timing">Timings</string>
    <string name="ven">Venue</string>
    <string name="cname">No Course Published</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="exp">Experience</string>
    <string name="stu_skill">Skills</string>
    <string name="qualification">Qualification</string>
    <string name="stu_name">Student Name</string>
    <string name="ins_name">Instructor Name</string>
    <string name="email_id">EMail Id : </string>
    <string name="email">EMail</string>
    <string name="sdate"> Date</string>
    <string name="edit_name">NAME</string>
    <string name="edit_pno">PHONE NUMBER</string>
    <string name="edit_dob">DATE OF BIRTH</string>
    <string name="edit_msg">Select a pdf containing all certificates,if any:</string>
    <string name="edit_filename">(Name of File should not exceed five letters)</string>
    <string name="select_file">"No file selected.</string>
    <string name="upload_btn">Upload</string>
    <string name="select_file_btn">Select File</string>
    <string name="submit_btn">Submit</string>
    <string name="request_btn">Request</string>
    <string name="inst_info">Instructor Information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_skills">SKILLS</string>
    <string name="edit_exp">EXPERIENCE</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="active_users">Number Of\nActive Users:</string>
    <string name="count">Count</string>
    <string name="team_home">Team</string>
    <string name="course_start_date">Start Date        : </string>
    <string name="course_name">Course Name : </string>
    <string name ="course_info">Course Information</string>
    <string name="course_fee"> Course Fee : </string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="overall_rating">Overall\nRating: </string>
    <string name="personal_rating">Personal\nRating: </string>
    <string name="instr_name">Instructor Name : </string>
    <string name="student_name">Student Name : </string>
    <string name="course_timings">Timings : </string>
    <string name="stud_count">Student Count : </string>
    <string name="venue">Venue : </string>
    <string name="student_info">Student Information</string>
    <string name="course_published">Course Published : </string>
    <string name="dob">Date of Birth : </string>
    <string name="experience">Experience : </string>
    <string name="gender">Gender : </string>
    <string name="mf">Male/Female</string>
    <string name="sname">Name</string>
    <string name="contact_no">Contact No : </string>
    <string name="number">Number</string>
    <string name="qual">Qualification :</string>
    <string name="skills">Skills : </string>
    <string name="enroll_btn">Enroll</string>
    <string name="rate">Rate</string>

    <string name="student_search">Search</string>
    <string name="student_find">Find By\nCourse</string>
    <string name="student_find1">Find By\nInstructor</string>
    <string name="teacher_find">Post Course</string>
    <string name="teacher_find1">My courses</string>
    <string name="teacher_find2">Delete and complete\ncourse</string>
    <string name="teacher_find3">Edit Course\ninformation</string>

    <string name="profile_name">Name</string>
    <string name="profile_b1">Edit Profile</string>
    <string name="profile_b2">Logout</string>
    <string name="profile_gender">Male/Female</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_phone">Contact Number</string>
    <string name="profile_qua">Qualification</string>
    <string name="profile_skills">Skills</string>
    <string name="profile_exp">Experiance</string>
    <string name="profile_b3">Courses Taken</string>
    <string name="profile_b4">Courses Published</string>
    <string name="profile_b5">Courses Completed</string>



</resources>
