<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/student_home"
    tools:context=".showStudentDetail">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inst_info"
                android:textSize="35dp"
                android:fontFamily="@font/proxima_nova_bold"
                android:id="@+id/title_student"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stud_name_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/student_name"
                android:textSize="20dp"
                android:layout_below="@+id/title_student"
                android:layout_marginTop="80dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stud_name_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/sname"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/title_student"
                android:layout_toRightOf="@id/stud_name_2"
                android:layout_marginTop="80dp"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dob_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/dob"
                android:textSize="20dp"
                android:layout_below="@+id/stud_name_value_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dob_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/inst_dob"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/stud_name_2"
                android:layout_toRightOf="@id/dob_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/gender"
                android:textSize="20dp"
                android:layout_below="@+id/dob_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/mf"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/dob_2"
                android:layout_toRightOf="@id/gender_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/contact_no"
                android:textSize="20dp"
                android:layout_below="@+id/gender_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phone_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/number"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/gender_2"
                android:layout_toRightOf="@id/phone_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experiance_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/experience"
                android:textSize="20dp"
                android:layout_below="@+id/phone_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/experiance_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/exp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/experiance_2"
                android:layout_below="@+id/phone_2"
                android:textSize="20dp">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qualification_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/qual"
                android:textSize="20dp"
                android:layout_below="@+id/experiance_value_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qualification_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/qualification"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/qualification_2"
                android:layout_below="@+id/experiance_value_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skills_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:text="@string/skills"
                android:textSize="20dp"
                android:layout_below="@+id/qualification_value_2"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/skills_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:hint="@string/stu_skill"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/skills_2"
                android:layout_below="@+id/qualification_value_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_published_2"
                android:fontFamily="@font/proxima_nova_bold"
                android:visibility="gone"
                android:text="@string/course_published"
                android:textSize="20dp"
                android:layout_below="@+id/skills_value_2"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_published_value_2"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColorHint="@color/hint_white"
                android:visibility="gone"
                android:hint="@string/cname"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/skills_value_2"
                android:layout_toRightOf="@id/course_published_2"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/request"
                android:fontFamily="@font/proxima_nova_bold"
                android:layout_below="@+id/course_published_value_2"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:background="@drawable/button_base"
                android:text="@string/request_btn"
                android:onClick="onrequest"
                android:layout_marginTop="60dp"
                />


        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





