<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@drawable/shade4"
    android:layout_height="fill_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:padding="30dp"

        android:layout_width="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EditCoursedetail"
            android:padding="15dp">
            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/editClassroom"
                android:textSize="35dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heading"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseName"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/courseName">
                </TextView>
                <EditText
                    android:id="@+id/course"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="20dp"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/course_hint"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLay"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay2"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Venue"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/venue_course">
                </TextView>
                <EditText
                    android:id="@+id/venue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textSize="20dp"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/venue_hint"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLay2"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay3"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Date"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/startingDate">
                </TextView>
                <EditText
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/date_hint"
                    android:padding="10dp"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLay3"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay4"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/timing"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/timings_course">
                </TextView>
                <EditText
                    android:id="@+id/timings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/timing_hint"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLay4"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay5"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Duration"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/duration_hint">
                </TextView>
                <EditText
                    android:id="@+id/duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/duration_hint"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relLay5"
                android:orientation="horizontal"
                android:weightSum="2"
                android:id="@+id/relLay6"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/Fees"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/fees_course">
                </TextView>
                <EditText
                    android:id="@+id/fees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border2"
                    android:hint="@string/fees_hint"
                    android:textColorHint="#FFFFFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/relLay6"
                android:paddingTop="40dp">
                <Button
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:textColor="@android:color/black"
                    android:background="@drawable/button_base"
                    android:onClick="post"
                    android:text="@string/updateBtn"  />
            </LinearLayout>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
