<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_up"
    tools:context=".Signup">
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".MainActivity">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_edit_text_signup"
                    android:layout_width="333dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="200dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/edit_text_border"
                    android:gravity="center_horizontal"
                    android:hint="@string/show_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/text_view_print"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/password_edit_text_signup"
                    android:layout_width="338dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:background="@drawable/edit_text_border"
                    android:gravity="center_horizontal"
                    android:hint="@string/show_password"
                    android:textColor="@color/text_view_print"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="#FFFFFF"
                    android:textSize="20dp" />

                <Button

                    android:id="@+id/sign_up_btn"
                    android:layout_width="274dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_base"
                    android:onClick="onSignup"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="@string/sign_up_button"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
